--- a/styles.css
+++ b/styles.css
@@ -5,23 +5,104 @@ body{
   margin: 0px;
   background-color:#444;
   font-size: 18px;
+  background-image: url(/assets/background.jpeg);
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background-color: orange;
 }
 body, a:link, a:visited, a:active{
   color: lightblue;
 }
-.title, .addDancerButton{
-  padding:5px 12px;
-  float:right;
-}
 .topbar{
   height:32px;
   background-color: #555;
+  text-align: center;
+  padding: 12px;
 }
 .title{
   background-color: #777;
 }
+.title{
+  padding:5px 12px;
+  text-align: center;
+  /*float: right;*/
+}
+.addDancerButton, .lineUpButton, .partnerUpButton, .randomizeButton{
+  padding: 10px;
+  display: inline-flex;
+  /* float: right; */
+}
+
+.table {
+  display: table;
+  margin: 0 auto;
+  margin: 12px;
+  padding: 12px;
+}
+ul#horizontal-list {
+  min-width: 696px;
+  list-style: none;
+  padding-top: 20px;
+  display: inline;
+}
+
 .dancer{
   border:10px solid red;
   border-radius:10px;
   position:absolute;
+}
+.squareDancer{
+  border:10px solid blue;
+  position: absolute;
+  animation: move-in-steps 4s infinite;
+  transition: border 2s;
+}
+.squareDancer:hover {
+  border: 10px solid purple;
+}
+
+.flashyDancer{
+  background: green;
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  transform: rotate(20deg);
+  transition: all .2s ease-in-out;
+}
+.flashyDancer:before {
+  content: "";
+  position: absolute;
+  height: 20px;
+  width: 20px;
+  background: green;
+  transform: rotate(135deg);
+}
+.flashyDancer:hover {
+  transform: scale(3);
+}
+
+
+
+@keyframes spinning {
+  from { transform: rotate(0deg) }
+  to { transform: rotate(360deg) }
+}
+.spin {
+  animation-name: spinning;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+
+@keyframes move-in-steps {
+  0% {
+    left: 0;
+    background: blue;
+  }
+  100% {
+    left: 100%;
+    background: red;
+  }
 }
